[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "metabolike"
authors = [{ name = "Yi Zhou", email = "metabolike@y1zhou.com" }]
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.8,<4"
keywords = ["bioinformatics", "metabolic-pathway", "network", "graph-database"]
dependencies = [
    "lark>=0.11.3,<2.0.0",
    "pandas>=1.0.0,<2.0.0",
    "orjson>=3.6.2,<4.0.0",
    "numpy>=1.22.0,<2.0.0",
    "python-libsbml>=5.19.2",
    "neo4j>=5.0.0",
    "tqdm>=4.64.0",
    "pyyaml>=6.0.0",
    "typer>=0.4.1,<0.5.0",
    "fastapi>=0.71.0,<0.76.0",
    "uvicorn>=0.17.0,<0.18.0",
    "requests>=2.28.0",
    "rdkit>=2022.3.3",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dynamic = ["version", "description"]

[project.urls]
Documentation = "https://metabolike.readthedocs.io/"
Source = "https://github.com/y1zhou/metabolike"

[project.scripts]
metabolike = "metabolike.main:app"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "coverage<6.4",
    "coverage[toml]<6.4",
    "hypothesis>=6.47.0",
    "pytest-dotenv>=0.5.2",
]
doc = ["sphinx", "sphinx_rtd_theme", "sphinx-autodoc-typehints"]
dev = ["black>=22.3.0"]


[tool.flit.sdist]
include = ["doc/"]
exclude = ["doc/*.html", "tests/", ".github/", ".readthedocs.yaml"]

[tool.pdm]
version = { from = "metabolike/__init__.py" }
excludes = ["doc/*.html", "tests/", ".github/", ".readthedocs.yaml"]
includes = ["doc/"]

[tool.pdm.dev-dependencies]
