[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "metabolike"
description = "Build graph database from SBML models and identify reprogrammed metabolisms."
authors = [{ name = "Yi Zhou"}, {email = "metabolike@y1zhou.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9,<4"
keywords = ["bioinformatics", "metabolic-pathway", "network", "graph-database"]
dependencies = [
    "lark>=0.11.3,<2.0.0",
    "pandas~=1.0",
    "orjson>=3.6.2,<4.0.0",
    "numpy~=1.22",
    "python-libsbml>=5.19.2",
    "neo4j~=5.0",
    "tqdm>=4.64.0",
    "pyyaml~=6.0",
    "typer>=0.4.1,<0.5.0",
    "pydantic>=1.10.0,<1.11.0",
    "streamlit>=1.12.0",
    "streamlit-agraph",
    "uvicorn~=0.17.0",
    "requests>=2.28.0",
    "rdkit",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Pytest",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
documentation = "https://metabolike.readthedocs.io/"
repository = "https://github.com/y1zhou/metabolike"

[project.scripts]
metabolike = "metabolike.main:app"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "coverage<6.4",
    "coverage[toml]<6.4",
    "hypothesis>=6.47.0",
    "pytest-dotenv>=0.5.2",
]
doc = ["mkdocs-material", "mkdocstrings[python]>=0.18", "mkdocs-gen-files", "mkdocs-literate-nav"]
dev = ["black>=22.3.0", "pre-commit", "metabolike[test,doc]"]

[tool.pdm]
version = { source = "file", path = "metabolike/__init__.py" }

[tool.flit.sdist]
include = ["doc/"]
exclude = ["doc/*.html", "tests/", ".github/", ".readthedocs.yaml", ".pre-commit-config.yaml"]
