[metadata]
name = metabolike
version = attr: metabolike.__version__
author = Yi Zhou
url = https://github.com/y1zhou/metabolike
keywords = bioinformatics, metabolic-pathway, network
description = Metabolic reprogramming analysis
long_description = file: README.rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Framework :: FastAPI
    Framework :: Pytest
    Framework :: Sphinx
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Typing :: Typed

[options]
python_requires = >=3.6
packages = find:
install_requires =
    lark>=0.11.3,<1.0.0
    pandas
    numpy
    neo4j>=4.0.0
    fastapi>=0.70.0,<0.71.0
    uvicorn>=0.16.0,<0.17.0

[options.extras_require]
tests = pytest
